test_suite/tests/ui/any/attributes/unsupported_attribute.stderr
error: Numeric operations can only be implemented for integer types
 --> tests/ui/any/attributes/unsupported_attribute.rs:5:1
  |
5 | #[nutype(checked_ops)]
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `nutype` (in Nightly builds, run with -Z macro-backtrace for more info)
