test_suite/tests/ui/any/attributes/unsupported_attribute.rs
use nutype::nutype;

pub struct Inner(String);

#[nutype(checked_ops)]
pub struct Name(Inner);

fn main () {}
